--- a/portfolio.html
+++ b/portfolio.html
@@ -355,6 +355,24 @@
               </li>
             </ul>
           </div>
+          <div class="subscribe">
+            <p class="attach-p">Підпишіться на розсилку</p>
+            <input
+              type="email"
+              name="subscribe-email"
+              class="subscribe-input"
+              placeholder="E-mail"
+              required
+              id="subscribe-email"
+            />
+          </div>
+          <div>
+            <button type="submit" class="subscribe-button">
+              Підписатися<svg class="modal-svg-close" width="24" height="24">
+                <use href="./images/icons.svg#icon-paperplane"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
