--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
           </div>
           <div>
             <button type="submit" class="subscribe-button">
-              Підписатися<svg class="modal-svg-close" width="24" height="24">
+              Підписатися<svg class="subscribe-svg-close" width="24" height="24">
                 <use href="./images/icons.svg#icon-paperplane"></use>
               </svg>
             </button>
